--- a/html/genome.html
+++ b/html/genome.html
@@ -7,7 +7,7 @@
     <td width="400">
       <strong>Gene Name: <a href="[% base %]/browse?accession=[% accession %]">[% genename %]</a><br></strong>
       <strong>Accession:</strong> [% accession %]<br>
-      <strong>Species:</strong> [% species %]<br>
+      <strong>Species:</strong><i> [% species %]</i><br>
       <strong>Run</strong> <a href="[% base %]/local_blast?accession=[% accession %]">Local Blast</a><br>
       <strong>Run</strong> <a href="[% base %]/remote_blast?accession=[% accession %]">Remote Blast</a></br>
       <strong>Graph</strong> <a href="[% base %]/landscape?accession=[% accession %]">MFE minima</a><br>
