--- a/html/genome.html
+++ b/html/genome.html
@@ -7,6 +7,8 @@
       <strong>Gene Name: <a href="[% base %]/browse?accession=[% accession %]">[% genename %]</a></strong>
       [% IF short_accession %]
       <a href="http://db.yeastgenome.org/cgi-bin/locus.pl?locus=[% short_accession %]">SGD Link</a>
+      [% ELSIF genbank_accession %]
+      <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?db=nuccore&cmd=&term=[% genbank_accession %]&go=Go">GenBank Link</a>
       [% END %]
       <br>
       <strong>Accession:</strong> [% accession %]<br>
