--- a/html/blast.html
+++ b/html/blast.html
@@ -5,7 +5,7 @@ There were [% num_hits %] hits in the local blast database.<br>
 [% FOREACH num = hit_names.keys.nsort %]
 Hit Number: [% num %]<br>
 Name: [% hit_names.$num %]<br>
-Accession: <a href="index.cgi/browse?accession=[% accessions.$num %]">[% accessions.$num %]</a><br>
+Accession: <a href="[% base %]/browse?accession=[% accessions.$num %]">[% accessions.$num %]</a><br>
 Length: [% lengths.$num %]<br>
 Description: [% descriptions.$num %]<br>
 Score: [% scores.$num %]  Significance: [% significances.$num %] Bits: [% bitses.$num %]<br>
@@ -23,5 +23,6 @@ Evalue: [% hsps_evalue.$num.$hsp %] Gaps: [% hsps_gaps.$num.$hsp %] Number Ident
 
 </pre>
 [% END %]
+<hr>
 <br>
 [% END %]
