--- a/html/mrna_sequence.html
+++ b/html/mrna_sequence.html
@@ -1,30 +1,29 @@
+
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
- <tr align="left" valign="top">
-  <td width="400">
-    <font color="#000000" face="Courier New, Courier, mono"><strong>[% sliplist %]<br>
-	<font color="Green">Green</font>: 0 Frame Start Codon<br>
-	<font color="Red">Red</font>: 0 Frame Stop Codon<br>
-	<font color="Blue">Blue</font>: Slippery Site<br>
-	<font color="Orange">Orange</font>: First -1 Frame Stop Codon<br>
-  </td>
+ <tr>
   <td>
-    <strong>Comments:</strong> [% comments %]
-  </td>
- </tr>
- <tr align="left" valign="top">
-  <td colspan="2">
     <hr align="center" width="100%" noshade>
   </td>
  </tr>
  <tr align="left" valign="top">
-  <td colspan="2" bgcolor="#CCCCCC"><font face="Courier New, Courier, mono">&nbsp;</font>
-    <p><strong><font color="#000000" face="Courier New, Courier, mono">&gt;[% accession %] | [% genename %]<br>
+  <td>
+   <font color="Green">Green</font>: 0 Frame Start Codon<br>
+   <font color="Red">Red</font>: 0 Frame Stop Codon<br>
+   <font color="Blue">Blue</font>: Slippery Site<br>
+   <font color="Orange">Orange</font>: First -1 PTC<br>
+  </td>
+ </tr>
+ <tr align="left" valign="top">
+ </tr>
+ <tr align="left" valign="top">
+  <td colspan="4" bgcolor="#CCCCCC"><font face="Courier New, Courier, mono">&nbsp;</font>
+    <strong><font color="#000000" face="Courier New, Courier, mono">&gt;[% accession %] | [% genename %]<br>
     </font></strong>
     <font face="Courier New, Courier, mono">
-
 [% pretty_mrna_seq %]
     </font>
-    </p>
+  </center>
   </td>
  </tr>
 </table>
+ 
