--- a/html/help_blast.html
+++ b/html/help_blast.html
@@ -1,10 +1,10 @@
  <p>
   There are two main ways to access BLAST in the PRFdb.  When looking
   at the sequence of a particular gene, it is possible to perform a
-  local or NR blast.  A local blast should find any sequences in the
-  PRFdb which are similar to the sequence window of interest while a
-  remote blast provides a listing of genes from NR which are similar.
-  If desired, these accessions may be imported into the PRFdb for
-  examination later.
+  BLAST search against all entries in the PRFdb or a remote search against
+  the NR database.  Currently, this only allows one to use the default
+  BLAST options.  When using the NR search, it is possible to import the
+  resulting sequences into the PRFdb for later examination.  Sequences imported
+  in this fashion are added to a queue to be searched as soon as possible.
  </p>
 
