--- a/html/genome.html
+++ b/html/genome.html
@@ -27,8 +27,14 @@
    </strong> [% comments %]<br>
   </td>
   <td width="50%">
-   Run <a href="[% base %]/local_blast?accession=[% accession %]" title="Run BLAST to search the PRFdb for sequences similar to this gene.">Local Blast</a> or
+   Run <a href="[% base %]/local_blast?accession=[% accession %]" title="Run BLAST to search the PRFdb for sequences similar to this gene.">Local Blast</a>
+
+<!----
+ or
    <a href="[% base %]/remote_blast?accession=[% accession %]" title="Run BLAST to search the NR database for sequences similar to this gene.">Remote Blast</a> using this gene.</br>
+
+----->
+  <br>
   Graph </strong><a href="[% base %]/landscape?accession=[% accession %]" title="View a graph of putative Minimum Free Energy with respect to position." rel="external" target="_blank">MFE minima</a> or
    <a href="[% base %]/download_sequence?accession=[% accession %]" title="Download a fasta file containing this gene.">Download Sequence</a><br>
   </td>
