--- a/html/mrna_sequence.html
+++ b/html/mrna_sequence.html
@@ -7,22 +7,36 @@
  </tr>
  <tr align="left" valign="top">
   <td>
-   <font color="Green">Green</font>: 0 Frame Start Codon<br>
-   <font color="Red">Red</font>: 0 Frame Stop Codon<br>
-   <font color="Blue">Blue</font>: Slippery Site<br>
-   <font color="Orange">Orange</font>: First -1 PTC<br>
+    <table align="left" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td><font color="Green">Green</font>:&nbsp;</td><td>0 Frame Start Codon</td>
+      </tr>
+      <tr>
+        <td><font color="Red">Red</font>:&nbsp;</td><td>0 Frame Stop Codon</td>
+      </tr>
+      <tr>
+        <td><font color="Blue">Blue</font>:&nbsp;</td><td>Slippery Site</td>
+      </tr>
+      <tr>
+        <td><font color="Orange">Orange</font>:&nbsp;</td><td>First -1 PTC</td>
+      </tr>
+      <tr>
+        <td><font color="#FF0080">Maroon</font>:&nbsp;</td><td>SNP</td>
+      </tr>
+    </table>
   </td>
  </tr>
  <tr align="left" valign="top">
  </tr>
  <tr align="left" valign="top">
-  <td colspan="4" bgcolor="#CCCCCC"><font face="Courier New, Courier, mono">&nbsp;</font>
+  <td colspan="4">
+   <table bgcolor="#E8E8E8"><tr><td><font face="Courier New, Courier, mono">&nbsp;</font>
     <strong><font color="#000000" face="Courier New, Courier, mono">&gt;[% accession %] | [% genename %]<br>
     </font></strong>
     <font face="Courier New, Courier, mono">
 [% pretty_mrna_seq %]
-    </font>
-  </center>
+    </font></td></tr>
+   </table>
   </td>
  </tr>
 </table>
