--- a/html/genome.html
+++ b/html/genome.html
@@ -28,7 +28,7 @@
    , <a href="http://www.ncbi.nlm.nih.gov/entrez/dispomim.cgi?id=[% omim_id %]" title="View associated OMIM:[% omim_id %] at NCBI" rel="external" target="_blank">OMIM Link</a>
    [% END %]
    <br>
-   Run <a href="[% base %]/local_blast?accession=[% accession %]" title="Run BLAST to search the PRFdb for sequences similar to this gene.">Local Blast</a>
+   Run <a href="[% base %]/search_local_blast?accession=[% accession %]" title="Run BLAST to search the PRFdb for sequences similar to this gene.">Local Blast</a>
 
 <!----
  or
@@ -36,7 +36,9 @@
 
 ----->
   <br>
+  [% IF landscape_num %]
   Graph </strong><a href="[% base %]/landscape?accession=[% accession %]" title="View a graph of putative Minimum Free Energy with respect to position." rel="external" target="_blank">MFE minima</a> or
+  [% END %]
    <a href="[% base %]/download_sequence?accession=[% accession %]" title="Download a fasta file containing this gene.">Download Sequence</a><br>
   </td>
  </tr>
