--- a/html/genome.html
+++ b/html/genome.html
@@ -1,6 +1,5 @@
 <input type="hidden" name="species" value="[% species %]">
 <input type="hidden" name="accession" value="[% accession %]">
-
 <table width="100%" border="0" cellspacing="2" cellpadding="2">
  <tr align="left" valign="top">
    <td width="50%">
@@ -13,7 +12,7 @@
    </strong> [% accession %]<br>
    <strong>
     <a href="[% base %]/help_detail#help_species" title="Check the help for species" rel="external" target="_blank">Species:</a>
-   </strong><i> [% species %]</i><br>
+   </strong><i> [% long_species %]</i><br>
    <strong>
     <a href="[% base %]/help_genome#help_comments" title="Check the help for the comment field" rel="external" target="_blank">Comments:</a>
    </strong> [% comments %]<br>
