Fixed up Blast searching, Added multiple matches on search, fixed some more prf_daemon bugs from the new config system

--- a/gene_summary.html
+++ b/gene_summary.html
@@ -37,7 +37,7 @@
 % if ($landscape->[0][0] > 0) {
   Graph </strong><a href="/landscape?accession=<% $accession %>" title="View a graph of putative Minimum Free Energy with respect to position." rel="external" target="_blank">MFE minima</a> or
 % }
-   <a href="/download_sequence?accession=<% $accession %>" title="Download a fasta file containing this gene.">Download Sequence</a><br>
+   Download: <a href="/download_sequence.html?accession=<% $accession %>" title="Download a fasta file containing this gene.">Nucleotide</a> or <a href="/download_aasequence.html?accession=<% $accession %>" title="Download a fasta file containing this gene's amino acid sequence.">Amino acid</a> sequence.<br>
   </td>
  </tr>
 </table>
