--- a/download_sequence.html
+++ b/download_sequence.html
@@ -1,7 +1,7 @@
 <%init>
  $r->content_type('application/octet-stream');
  my $stmt = qq"SELECT comment,mrna_seq FROM genome WHERE accession = ?";
- my $seq = $db->MySelect({statement => $stmt, vars => [$accession], type => 'row'});
+ my $seq = $db->MySelect(statement => $stmt, vars => [$accession], type => 'row');
  my @tmp = split(//, $seq->[1]);
  my $filename = qq(${accession}.fasta);
  $filename =~ s/SGDID://g;
