--- a/search_blast.html
+++ b/search_blast.html
@@ -3,7 +3,7 @@
 %   if (defined($start) and defined($accession)) {
 %     $search_string = $db->MySelect(statement => "SELECT sequence FROM mfe WHERE accession = ? AND start = ? LIMIT 1", vars => [$accession, $start], type => 'single');
 %   } elsif (defined($accession)) {
-%     $search_string = $db->MySelect(statement => "SELECT mrna_Seq FROM genome WHERE accession = ? LIMIT 1", vars => [$accession], type => 'single');
+%     $search_string = $db->MySelect(statement => "SELECT mrna_seq FROM genome WHERE id = ? LIMIT 1", vars => [$accession], type => 'single');
 %   }
 % }
 % $search_string =~ tr/Uu/Tt/;
@@ -30,7 +30,7 @@ Importing doesn't work yet, Accession: <a href="/import.html?accession=<% $local
 Length: <% $local_info->{hits}->[$c]->{length} %><br>
 Description: <% $local_info->{hits}->[$c]->{description} %><br>
 Score: <% $local_info->{hits}->[$c]->{score} %>
-   Signifigance: <% $local_info->{hits}->[$c]->{significance} %>
+   Significance: <% $local_info->{hits}->[$c]->{significance} %>
    Bits: <% $local_info->{hits}->[$c]->{bits} %><br>
 %    my @hsps = ();
 %    if (defined(@{$local_info->{hits}->[$c]->{hsps}})) {
