--- a/search_blast.html
+++ b/search_blast.html
@@ -3,7 +3,7 @@
 %   if (defined($start) and defined($accession)) {
 %     $search_string = $db->MySelect(statement => "SELECT sequence FROM mfe WHERE accession = ? AND start = ? LIMIT 1", vars => [$accession, $start], type => 'single');
 %   } elsif (defined($accession)) {
-%     $search_string = $db->MySelect(statement => "SELECT mrna_seq FROM genome WHERE id = ? LIMIT 1", vars => [$accession], type => 'single');
+%     $search_string = $db->MySelect(statement => "SELECT mrna_seq FROM genome WHERE accession = ? LIMIT 1", vars => [$accession], type => 'single');
 %   }
 % }
 % $search_string =~ tr/Uu/Tt/;
