--- a/search_blast.html
+++ b/search_blast.html
@@ -1,16 +1,33 @@
-% if (!defined($search_string)) {
-<p>search_string is not defined</p>
-%   if (defined($start) and defined($accession)) {
-%     $search_string = $db->MySelect(statement => "SELECT sequence FROM mfe WHERE accession = ? AND start = ? LIMIT 1", vars => [$accession, $start], type => 'single');
-%   } elsif (defined($accession)) {
-%     $search_string = $db->MySelect(statement => "SELECT mrna_seq FROM genome WHERE accession = ? LIMIT 1", vars => [$accession], type => 'single');
-%   }
-% }
-% $search_string =~ tr/Uu/Tt/;
-% $search_string =~ s/\s//g;
-% my $blast = new PRFBlast(config=>$config);
+<%perl>
+my $local_info;
+my $blast = new PRFBlast(config=>$config);
+$search_string\n";
+if (!defined($search_string)) {
+  print "<p>search_string is not defined</p>\n";
+  if (defined($start) and defined($accession)) {
+      $search_string = $db->MySelect(statement => "SELECT sequence FROM mfe WHERE accession = ? AND start = ? LIMIT 1", vars => [$accession, $start], type => 'single');
+  } elsif (defined($accession)) {
+      $search_string = $db->MySelect(statement => "SELECT mrna_seq FROM genome WHERE accession = ? LIMIT 1", vars => [$accession], type => 'single');
+  }
+  $search_string =~ tr/Uu/Tt/;
+  $search_string =~ s/\s//g;
+  $local_info = $blast->Search($search_string, $location);
+} elsif ($blast_type eq 'blastn') {
+    $search_string =~ tr/Uu/Tt/;
+    $search_string =~ s/\s//g;
+    $local_info = $blast->Search($search_string, $location);
+} elsif ($blast_type eq 'tblastn') {
+    $local_info = $blast->Search($search_string, $location, $blast_type);
+} else {
+    $local_info = $blast->Search($search_string, $location, 'blastn');
+}
+</%perl>
 </p>
-% my $local_info = $blast->Search($search_string, $location);
+
+% if (!defined($local_info)) {
+  <p>There was an error in your blast search, the most likely cause is that the query sequence was not long enough.
+  Please remind me to sort out the potential errors so I can report them more fully</p>
+% } else {
 <p>Searching the <% $location %> BLAST database, the query sequence has <% $local_info->{query_length} %> bases.<br>
 % my (%hit_names, %accessions, %lengths, %descriptions, %scores, %significances, %bitses);
 % my (%hsps_evalue, %hsps_expect, %hsps_gaps, %hsps_querystring, %hsps_homostring, %hsps_hitstring, %hsps_numid, %hsps_numcon, %hsps_length, %hsps_score);
@@ -67,11 +84,12 @@ Evalue: <% $local_info->{hits}->[$c]->{hsps}->[$d]->{evalue} %>
 <hr>
 <br>
 % }
-
+% }
 
 <%args>
   $start => undef
   $accession => undef
   $search_string => undef
   $location => undef
+  $blast_type => 'blastn'  
 </%args>
