--- a/search_blast.html
+++ b/search_blast.html
@@ -1,9 +1,7 @@
 <%perl>
 my $local_info;
 my $blast = new PRFBlast(config=>$config);
-$search_string\n";
 if (!defined($search_string)) {
-  print "<p>search_string is not defined</p>\n";
   if (defined($start) and defined($accession)) {
       $search_string = $db->MySelect(statement => "SELECT sequence FROM mfe WHERE accession = ? AND start = ? LIMIT 1", vars => [$accession, $start], type => 'single');
   } elsif (defined($accession)) {
@@ -35,13 +33,13 @@ if (!defined($search_string)) {
     <p>There were no hits in the blast database.<br></p>
 % }
 % my @hits = @{$local_info->{hits}};
-% foreach my $c (0 .. $#hits) {
+% foreach my $c (1 .. $#hits) {  ## Skip the first hit, which is identical.
 <p>Hit Number: <% $c %><br>
 Name: <% $local_info->{hits}->[$c]->{hit_name} %><br>
 % if ($location eq 'local') {
 Accession: <a href="/search.html?short=1&accession=<% $local_info->{hits}->[$c]->{accession} %>">
 % } else {
-Importing doesn't work yet, Accession: <a href="/import.html?accession=<% $local_info->{hits}->[$c]->{accession} %>">
+Accession: <a href="/import.html?accession=<% $local_info->{hits}->[$c]->{accession} %>" title="Import <% $local_info->{hits}->[$c]->{accession} %> into the PRFdb">
 % }
   <% $local_info->{hits}->[$c]->{accession} %></a><br>
 Length: <% $local_info->{hits}->[$c]->{length} %><br>
