starting GO and some small graphs

--- a/gene_summary.html
+++ b/gene_summary.html
@@ -3,7 +3,7 @@
    <td width="50%">
     <strong>
      <a href="/help_genome#help_genename" title="The gene name is provided by genbank or the SGD" rel="external" target="_blank">Gene Name:</a>
-    </strong> <% $genename %>
+    </strong> <a href="/go_test.html?genename=<% $genename %>"><% $genename %></a>
    <br>
    <strong>
     <a href="/help_detail#help_accession" title="Check the help for accession" rel="external" target="_blank">Accession:</a>
