--- a/gene_summary.html
+++ b/gene_summary.html
@@ -39,7 +39,7 @@
   <br>
 % my $table = "landscape_$species";
 % my $landscape = $db->MySelect(statement => "SELECT count(id) FROM $table WHERE accession = ?", vars => [$accession], type => 'single');
-   Download: <a href="/download_sequence.html?accession=<% $accession %>" title="Download a fasta file containing this gene.">Nucleotide</a> or <a href="/download_aasequence.html?accession=<% $accession %>" title="Download a fasta file containing this gene's amino acid sequence.">Amino acid</a> sequence.<br>
+   Download: <a href="/download/sequence.html?accession=<% $accession %>" title="Download a fasta file containing this gene.">Nucleotide</a> or <a href="/download/aasequence.html?accession=<% $accession %>" title="Download a fasta file containing this gene's amino acid sequence.">Amino acid</a> sequence.<br>
   </td>
  </tr>
 </table>
